# osdev

./: CMakeLists.txt  README.md
boot/: CMakeLists.txt
boot/src/: stage0.asm
cmake/: library.cmake
modules/boot/: CMakeLists.txt
modules/boot/stage0/: CMakeLists.txt
modules/boot/stage0/src/: entry.asm
modules/boot/stage1/: CMakeLists.txt  stage1.ld
modules/boot/stage1/src/: entry.c
